kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api-deployment
  namespace: default
  labels:
    app: test-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      containers:
      - name: test-api-image
        image: http://10.252.0.103:8082/repository/kubernetes-test-image/test-api:latest
        ports:
          - containerPort: 8080

      imagePullSecrets:
        - name: regcred
