kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-api-server-http-ingress
  namespace: default
  annotations:
   
spec:
  ingressClassName: haproxy
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-api-service
                port:
                  number: 8080
      host: test-api-go.gazi.edu.tr
  tls:
    - hosts:
        - test-api-go.gazi.edu.tr
      secretName: tls-secret
